# scavenger

./: PLAN.md  README.md  SPEC.md  pyproject.toml
src/scavenger/: __init__.py
src/scavenger/cli/: __init__.py  config_commands.py  daemon_commands.py  daemon_runner.py  history_commands.py  main.py  report_commands.py
src/scavenger/core/: __init__.py  config.py  daemon.py  executor.py  scheduler.py  task.py
src/scavenger/notification/: __init__.py  email.py  report.py
src/scavenger/storage/: __init__.py  history.py  json_storage.py
src/scavenger/utils/: __init__.py  cli_helpers.py  constants.py  logging.py  storage_helpers.py  usage_parser.py
src/scavenger/web/: __init__.py  app.py
